define rom_error_strerror() for converting error code to readable string

--- a/sw/device/silicon_creator/lib/BUILD
+++ b/sw/device/silicon_creator/lib/BUILD
@@ -105,6 +105,7 @@ cc_library(
 
 cc_library(
     name = "error",
+    srcs = ["error.c"],
     hdrs = ["error.h"],
     deps = [
         "//sw/device/lib/base:absl_status",
